Bug 42553 - VIEWING: wrong rectangular gradient geometry in SLIDESHOW
Summary: VIEWING: wrong rectangular gradient geometry in SLIDESHOW
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other Windows (All)
: highest critical
Assignee: Radek Doulik
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta0
Keywords:
Depends on:
Blocks: Impress-Gradient
  Show dependency treegraph
 
Reported: 2011-11-03 06:31 UTC by Raphaël
Modified: 2013-11-15 15:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Problem with transparency gradient (12.77 KB, application/vnd.oasis.opendocument.presentation)
2011-11-03 06:31 UTC, Raphaël
Details
Other illustration of the problem with transparency gradient. (11.84 KB, application/vnd.oasis.opendocument.presentation)
2011-11-03 06:33 UTC, Raphaël
Details
Sample Document (45.02 KB, application/vnd.oasis.opendocument.presentation)
2011-11-13 03:18 UTC, Rainer Bielefeld Retired
Details
gradient bugs still in master (12.70 KB, application/vnd.oasis.opendocument.presentation)
2012-05-04 06:41 UTC, Thorsten Behrens (allotropia)
Details
fix square gradient rendering (3.04 KB, patch)
2012-12-11 11:28 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raphaël 2011-11-03 06:31:31 UTC
Created attachment 53110 [details]
Problem with transparency gradient

There is a problem with the 'transparency gradient' (linear, axial, radial, etc) in Impress, when turning to presentation mode. It is a regression from openoffice, but present since the first version of LibreOffice.

The best way to see it is the following:

1) Make a new slide with black background;

2) Draw a shape and fill area with black (so you have a black shape on black background);

3) Right click -> Area -> Transparency -> Gradient and choose for instance a linear one;

4) Start the diaporama (F5) and wait for the rendering: your black form isn't black anymore !

See test files in attachment for illustration...

Even if this functionnality can be considered as not essential, this bug can be a big problem, affecting the retro-compatibility with openoffice: for instance, an enterprise using transparency gradient for its logo (made on OpenOffice) is very very annoyed !

This bug was reported, but mixed with other problems, in bug 35681. As it was recently closed, but not completely fixed, I open this one with a specific description.
Comment 1 Raphaël 2011-11-03 06:33:24 UTC
Created attachment 53111 [details]
Other illustration of the problem with transparency gradient.
Comment 2 Rainer Bielefeld Retired 2011-11-13 03:17:04 UTC
[Reproducible] with "LibreOffice 3.4.4  - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:402)]" 

I created a new example from reporter's ones only showing contents related to report.

To reproduce the bug simply open "Test_new344.odp", start presentation and compare pictures with "So it looked in Edit mode", you will see strange differences.

Related or not? copy /paste as Bitmap also shows strange gradient geometry modifications, but mostly different from those visible in presentation mode

@Radek:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 3 Rainer Bielefeld Retired 2011-11-13 03:18:44 UTC
Created attachment 53474 [details]
Sample Document

See comment 1
Comment 4 Raphaël 2011-11-13 14:56:28 UTC
@Rainer Bielfeld: I don't understand why you truncated my test file. Moreover, why did you change my title? With my old title 'problems with transparency gradient in presentation mode', every slide of my test file was relevant, especially the first one, which exactly repeat the procedure described in comment 0. Please note that the problem is more than just a geometrical one.

Maybe you didn't see exactly what the problem is: when you run the first slide of my file in presentation mode, the screen will be black for few seconds, but if you wait a little (the rendering process takes some time), you will see the relevance of this slide !
Comment 5 Rainer Bielefeld Retired 2011-11-13 22:57:50 UTC
bugzilla-daemon@freedesktop.org schrieb:

> @Rainer Bielfeld: I don't understand why you truncated my test file.

Hi,

Your document demonstrates various problems with common subject 
"gradient/transparency", but very different manifestations and roots. As 
I told you several times when you posted again and again the various 
elements of your sample document in various reports, it is important to 
submit different reports for different problems.

> Maybe you didn't see exactly what the problem is:

You are wrong. I see all the problems demonstrated in your documents 
very clear. Some of the problems have already been fixed in Master  some 
are in the fixing process, only the geometry problem is a new one that 
hadn't been reported until now. So I stripped away all known problems 
and left the relevant new one.

CU

Rainer
Comment 6 Raphaël 2011-11-14 03:50:45 UTC
@Rainer:
Thanks for your answer. I am glad to hear that the problem displayed in the first slide of my test file is already solved :)

I was afraid about that because the patch proposed for bug 33591 don't solve it (it is another problem, which don't involve 'transparency gradient'). 
Actually, this bug 42553 is in some way a duplicate of my old bug 36547, but with a more precise description. Note that Bug 36547 was considered as a duplicate of bug 36470, and bug 36470 as a duplicate of bug 33591, and now bug 33591 as fixed. But bug 36547 is not fixed by the patch for bug 33591, it's a different problem.

So my question is: as neither bug 33591 nor bug 35681 solve the problem described here in comment 0 (illustrated on the first slide of my initial test file), which bug fixed it in the master branch ?

In all cases, the new title about gradient geometry isn't in adequation with my description in comment 0...
Comment 7 trombka 2011-11-21 05:39:24 UTC
I can also confirm this bug. Along with the one I reported some time ago (#39369), it makes Impress totally unusable for anything more than trivial slides.
Comment 8 Rainer Bielefeld Retired 2011-11-21 22:32:21 UTC
@Radek:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 9 Florian Reisinger 2012-03-25 06:39:23 UTC
Not working with 3.4.4 on Ubuntu
I will have a look at it with 3.5 soon
Comment 10 Michael Meeks 2012-05-04 02:41:54 UTC
persists in 3.6 (master), unrelated to cairo / hardware acceleration.
Odd that it is independent of size / zoom - we can render that gradient at that size correctly; -but- when we render it in a presentation we bust it ;-) Perhaps some metafile replay thing ?
Comment 11 Thorsten Behrens (allotropia) 2012-05-04 05:41:15 UTC
(In reply to comment #10)
> persists in 3.6 (master), unrelated to cairo / hardware acceleration.
> Odd that it is independent of size / zoom - we can render that gradient at that
> size correctly; -but- when we render it in a presentation we bust it ;-)
> Perhaps some metafile replay thing ?
>
So we're all on the same page - in a master build, the only remaining problem I see is that rectangular gradients don't scale horizontally, to completely fill the shape, correct?
Comment 12 Rainer Bielefeld Retired 2012-05-04 06:25:55 UTC
> is that rectangular gradients don't scale horizontally, to completely fill
> the shape, correct?

Seems so, the only obvious problem I see with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 35ec153]" (tinderbox: Win-x86@6-fast, pull time 2012-05-02 06:53:41) is in Sample Document slide 2 "Area : black, Quadratic". In edit mode the beams lead to the corners of the shape (not rectangular), in slideshow they are rectangular to each other.
Comment 13 Thorsten Behrens (allotropia) 2012-05-04 06:41:28 UTC
Created attachment 61021 [details]
gradient bugs still in master

Attached an updated sample document - note that transparency gradient behaves different to std color gradient, and that hw-acceleration on/off affects std color gradient, and *only* that.
Comment 14 Thorsten Behrens (allotropia) 2012-05-04 13:00:20 UTC
See bug 49508 for a similar, but separated problem.
Comment 15 Michael Meeks 2012-12-05 19:55:22 UTC
reproduced in 4.0beta1.
Comment 16 Michael Meeks 2012-12-06 11:59:03 UTC
Interestingly, the square gradient in slideshow mode is rendered by vcl's

    ImplDrawComplexGradient

But in editing mode it appears to be rendered by something else; odd.
Comment 17 Michael Meeks 2012-12-06 12:18:42 UTC
Still rather unclear about this; it all seems to work rather nicely except for the 'Square' gradient.

The 'Square'-ness of the gradient is rather unclear to me in the drawing-layer impl. [ which I believe is used for the large preview in the gradient dialog ].

The thumbnail there however is rendered with the vcl gradient rendering and is indeed square - which is what we see in the presentation mode.

Most odd - did the behavior here really change ?
Comment 18 Michael Meeks 2012-12-11 11:28:40 UTC
Created attachment 71331 [details]
fix square gradient rendering

I'd love some review / feedback on this: Thorsten ?
Comment 19 Michael Meeks 2012-12-11 11:54:09 UTC
Thorsten ack'd on IRC; pushed.
Comment 20 Not Assigned 2012-12-11 11:56:41 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=055fca04a4e00b14e68fa5860b417cb25e471299

fdo#42553 - fix square gradient rendering by vcl.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Not Assigned 2012-12-11 12:02:44 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54d6055685d0b4b24779708373f7641eeec7d7d6&g=libreoffice-4-0

fdo#42553 - fix square gradient rendering by vcl.


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Michal Lisiak 2012-12-14 22:16:50 UTC
Compared the display results of 'Test_new344.odp' file between 'LibO-Dev_4.0.0.0.beta1_Linux_x86-64_install-deb_en-US' and 'Version 3.6.2.2 (Build ID: 360m1(Build:2))'. Could not spot the problem in the daily build. (Kubuntu 12.10)