fdo#42553 - fix square gradient rendering by vcl.